// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for Input Component should render Input 1`] = `
<div>
  <input
    class="sc-AxjAm drbfYu"
    value=""
  />
</div>
`;

exports[`Test for Input Component should render Input 2`] = `
<div>
  <input
    class="sc-AxjAm fcaPGr"
    height="big"
    value=""
    width="20"
  />
</div>
`;
